--- a/reactproject/package.json
+++ b/reactproject/package.json
@@ -16,7 +16,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "bootstrap": "5.2.0",
+    "bootstrap-icons":"1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
